--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "gitbook serve content docs",
     "build": "gitbook build content docs",
-    "push": "git add -A && git commit -m msg && git push"
+    "push": "npm run build && git add -A && git commit -m msg && git push"
   },
   "repository": {
     "type": "git",
