--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "note",
   "main": "index.js",
   "scripts": {
-    "start": "gitbook serve content docs",
-    "build": "gitbook build content docs",
+    "start": "git pull && gitbook serve content docs",
+    "build": "git pull && gitbook build content docs",
     "push": "npm run build && git pull && git add -A && git commit -m msg && git push"
   },
   "repository": {
