--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "git pull && gitbook serve content docs",
     "build": "git pull && gitbook build content docs",
-    "push": "npm run build && git pull && git add -A && git commit -m msg && git push"
+    "push": "php 1.php && npm run build && git pull && git add -A && git commit -m msg && git push"
   },
   "repository": {
     "type": "git",
