--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "git pull && gitbook serve content docs",
-    "build": "git pull && gitbook build content docs",
-    "push": "npm run build && git add -A && git commit -m msg && git push",
+    "build": "gitbook build content docs",
+    "push": "git pull && php php/pack.php && npm run build && git add -A && git commit -m msg && git push",
+    "php": "php php/pack.php && npm run build",
     "t": "php php/pack.php"
   },
   "repository": {
