--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "git pull && gitbook serve content docs",
     "build": "gitbook build content docs",
-    "push": "git pull && php php/pack.php && npm run build && git add -A && git commit -m msg && git push",
-    "test": "git pull && php php/pack.php && npm run build && git add -A && git commit -m msg && git push",
+    "push": "php php/pack.php && npm run build && git add -A && git commit -m msg && git push",
+    "test": "php php/pack.php && npm run build && git add -A && git commit -m msg && git push",
     "php": "php php/pack.php && npm run build",
     "t": "php php/pack.php"
   },
