--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "jsbuild": "node js/pack.js",
     "img": "node js/imgurl.js",
     "build": "gitbook build content docs",
-    "push": "npm run jsbuild && npm run build && git add -A && git commit -m msg && git push",
+    "push": "npm run img && npm run jsbuild && npm run build && git add -A && git commit -m msg && git push",
     "start": "npm run push"
   },
   "repository": {
