--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cname": "node js/cname.js",
     "build": "gitbook build content docs",
     "pushgit": "npm run img && npm run jsbuild && npm run build && npm run cname && git add -A && git commit -m msg && git push",
-    "push": "npm run img && npm run jsbuild && npm run build && git add -A && git commit -m msg",
+    "push": "git add -A && git commit -m msg",
     "start": "npm run pushgit"
   },
   "repository": {
