--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "devDependencies": {
     "directory-tree": "^3.5.1",
+    "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
     "vitepress": "^1.2.2"
