--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "@shikijs/vitepress-twoslash": "^1.6.1",
     "directory-tree": "^3.5.1",
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
