--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "fast-glob": "^3.3.2",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
+    "prismjs": "^1.29.0",
     "vitepress": "^1.2.2"
   },
   "scripts": {
