--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "devDependencies": {
     "@shikijs/vitepress-twoslash": "^1.6.1",
+    "@types/markdown-it": "^14.1.1",
+    "@types/node": "^20.12.13",
     "directory-tree": "^3.5.1",
     "fast-glob": "^3.3.2",
+    "feed": "^4.2.2",
     "gray-matter": "^4.0.3",
     "markdown-it": "^14.1.0",
     "prismjs": "^1.29.0",
