--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 'deploy'
+name: 'deploy to github'
 on: [push]
 jobs:
     build-and-deploy:
@@ -18,6 +18,9 @@ jobs:
 
             - name: Build
               run: npm run docs:build
+
+            - name: config git
+              run: git config --global user.email "282656050@qq.com" && git config --global user.name "loveagri"
 
             - name: Deploy
               run: cd dist && echo 'www.dotohi.com' > CNAME && git init && git add -A && git commit -m 'deploy' && git push -f git@github.com:loveagri/blog.git
