--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
               run: git config --global user.email "282656050@qq.com" && git config --global user.name "loveagri"
 
             - name: Deploy
-              run: cd dist && echo 'www.dotohi.com' > CNAME && git init && git add -A && git commit -m 'deploy' && git config user.password ${{ secrets.GITHUB_TOKEN }} && git branch -M master && git push -f git@github.com:loveagri/blog.git master
+              run: cd dist && echo 'www.dotohi.com' > CNAME && git init && git add -A && git commit -m 'deploy' && git config user.password ${{ secrets.GH_TOKEN }} && git branch -M master && git push -f git@github.com:loveagri/blog.git master
               env:
-                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
             - name: remove dist
               run: rm -rf dist
