--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,7 @@ jobs:
                   git init && git add -A 
                   git commit -m 'deploy' 
                   git branch -M master 
-                  git config user.signingKey ${{ secrets.GH_TOKEN }}
-                  git push -f https://github.com/loveagri/blog.git master
+                  git push -f https://${{ secrets.GH_TOKEN }}@github.com/loveagri/blog.git master
 
             - name: remove dist
               run: rm -rf dist
