--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/markdown-it-footnote": "^3.0.4",
+    "algoliasearch": "^4.24.0",
     "axios": "^1.7.2",
     "markdown-it-mathjax3": "^4.3.2",
     "vue": "^3.4.27"
