--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "markdown-it-footnote": "^4.0.0",
     "mermaid": "^10.9.1",
     "prismjs": "^1.29.0",
-    "vitepress": "^1.3.1"
+    "vitepress": "^1.3.1",
+    "vitepress-plugin-mermaid": "^2.0.16"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs --clean-cache --clean-temp",
